@@ -1,0 +1,4 @@
+package ar.org.pachisoft.matelang.parser;
+
+public class Parser {
+}
