@@ -1,0 +1,5 @@
+package ar.org.pachisoft.matelang.parser.expressions;
+
+public interface Expr {
+    <R> R accept(ExprVisitor<R> visitor);
+}
